fix nordea logo wrapping

--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -210,7 +210,7 @@ footer
   justify-content space-between
   flex-wrap wrap
   text-align center
-  @media screen and (max-width: 760px)
+  @media screen and (max-width: 940px)
     display block
   i
     margin 0 0.30em
@@ -222,7 +222,7 @@ footer
   display flex
   flex-direction column
   justify-content center
-  @media screen and (max-width: 760px)
+  @media screen and (max-width: 940px)
     margin-top 1em
 
 .sponsors
@@ -243,16 +243,17 @@ footer
   height 40px
   margin-right 1em
   vertical-align middle
-  @media screen and (max-width: 760px)
+  @media screen and (max-width: 940px)
     margin-top 1em
-
 
 .sponsor__futurice, .sponsor__metosin, .sponsor__leonidas
   height 30px
 
 .sponsor__nordea
   height 25px
-  margin-top: -3px
+  margin-top -3px
+  @media screen and (max-width: 940px)
+    margin-top 1em
 
 .feed
   width feedWidth
